fix(ui): dark mode

--- a/app/app.css
+++ b/app/app.css
@@ -7,11 +7,15 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950 font-serif;
+  @apply bg-white dark:bg-stone-700 text-stone-600 dark:text-stone-300 font-serif;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+}
+
+a {
+  @apply text-stone-700 dark:text-stone-200 underline;
 }
 
 h1,
@@ -20,7 +24,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply font-sans text-stone-700 leading-tight;
+  @apply font-sans text-stone-700 dark:text-stone-200 leading-tight;
 }
 
 h2,
@@ -74,8 +78,5 @@ h1 {
   }
   hr {
     @apply border-t border-stone-300 my-8;
-  }
-  a {
-    @apply text-stone-700 underline;
   }
 }
